worked on post routes
built post models
built built post routes
built get posts handler

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot",
-    "start": "node dist/index",
+    "start": "node dist/index.js",
     "webpack": "webpack --config webpack.config.ts",
     "build": "webpack -p"
   },
