--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^3.1.1",
     "karma-webpack": "^4.0.2",
+    "nodemon": "^2.0.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.0",
