--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/MaxiCB/TS-Node-Starter-BackEnd#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.3",
     "@types/helmet": "0.0.45",
     "@types/jasmine": "^3.5.9",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.0",
     "jasmine-core": "^3.5.0",
     "karma": "^4.4.1",
@@ -41,10 +44,13 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.11",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1"
