--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/helmet": "0.0.45",
     "@types/jasmine": "^3.5.9",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/multer": "^1.4.2",
     "@types/node": "^13.9.0",
     "jasmine-core": "^3.5.0",
     "karma": "^4.4.1",
@@ -46,6 +47,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -53,6 +55,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.11",
     "knex-cleaner": "^1.3.0",
+    "multer": "^1.4.2",
     "sqlite3": "^4.1.1"
   }
 }
